# Cstore

./: Cstore.py  README.md  cstore.py  setup.cfg  setup.py
.github/workflows/: workflow.yml
cstore/: cstore.py
cstore.egg-info/: PKG-INFO  SOURCES.txt
