[metadata]
name = cstore
version = 0.1.0
author = "Alice Catano"
author_email = "alice.schifelbein.caetano@gmail.com"
description = "Cliente para gerenciar bibliotecas C/C++ em um servidor remoto."
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/AliceAX24/Cstore/tree/main"

[options]
packages = find:
python_requires = >=3.6